--- a/SimpleCDN/wwwroot/index.html
+++ b/SimpleCDN/wwwroot/index.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    Hello, World!
+	Files in the wwwroot folder are served as internal SimpleCDN static files at the '/_cdn' path.
 </body>
 </html>
