--- a/SimpleCDN/wwwroot/index.html
+++ b/SimpleCDN/wwwroot/index.html
@@ -25,7 +25,7 @@
 	<main>
 		<img width="100" src="/_cdn/logo.svg" />
 		<p>
-			Static files for the SimpleCDN System are served from this directory.
+			Static files for the SimpleCDN System are served from this directory. Also, a health check is available at <a href="/_cdn/server/health">/_cdn/server/health</a>.
 		</p>
 		<p>
 			No external applications should depend on these files, as they may change without announcement in any release.
@@ -34,6 +34,7 @@
 			This directory contains files like <a href="/_cdn/styles.css">the style sheet</a>
 			and <a href="/_cdn/logo.svg">the SimpleCDN logo</a>.
 		</p>
+		<hr/>
 		<p>
 			By the way, if you see this page you are probably a developer. Nice! The SimpleCDN project is open source under
 			the MIT license, and available on GitHub
